--- a/src/language/lang_fr.properties
+++ b/src/language/lang_fr.properties
@@ -2,4 +2,34 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-label="merci"
+
+
+dossier_eng=dossier
+
+rech_lbl=Recherche
+
+nom_lbl=Nom
+
+motcle_lbl=Mot-cl\u00e9
+
+type_lbl=Type
+
+taille_lbl=Taille
+
+motcle_eng=Enregistrer
+
+param_eng=Parametres
+
+folder_mess=VEUILLEZ CHOISIR UN DOSSIER
+
+go_eng=Ok
+
+option_lbl=Options
+
+dossier_lbl=_ Dossier par d\u00e9faut _
+
+format_lbl=Formats support\u00e9s
+
+general_en=G\u00e9n\u00e9ral
+
+langue_en=Langues
