--- a/src/language/lang_ar.properties
+++ b/src/language/lang_ar.properties
@@ -2,4 +2,34 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-label="\u0634\u0643\u0631\u0627"
+
+
+dossier_eng=\u0625\u0636\u0628\u0627\u0631\u0629
+
+rech_lbl=\u0628\u062d\u062b
+
+nom_lbl=\u0623\u0633\u0645
+
+motcle_lbl=\u0643\u0644\u0645\u0629 \u0645\u0641\u062a\u0627\u062d\u064a\u0629
+
+type_lbl=\u0646\u0645\u0648\u0632\u062c
+
+taille_lbl=\u062d\u062c\u0645
+
+motcle_eng=\u0633\u062c\u0644
+
+param_eng=\u0625\u0639\u062f\u0627\u062f\u0627\u062a
+
+folder_mess=\u0627\u0644\u0631\u062c\u0627\u0621 \u0627\u062e\u062a\u064a\u0627\u0631 \u0645\u0644\u0641
+
+go_eng=Go
+
+option_lbl=\u062e\u064a\u0627\u0631\u0627\u062a
+
+dossier_lbl=\u0627\u0644\u0627\u0641\u062a\u0631\u0627\u0636\u064a 
+
+format_lbl=\u0648\u0623\u0634\u0643\u0627\u0644 \u0627\u0644\u062f\u0639\u0645
+
+general_en=\u0639\u0627\u0645
+
+langue_en=\u0627\u0644\u0644\u063a\u0627\u062a
