--- a/src/language/lang_en.properties
+++ b/src/language/lang_en.properties
@@ -2,4 +2,34 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-label="thank you"
+
+
+dossier_eng=folder
+
+rech_lbl=Search
+
+nom_lbl=Name
+
+motcle_lbl=Keyword
+
+type_lbl=Type
+
+taille_lbl=Size
+
+motcle_eng=Save
+
+param_eng=Settings
+
+folder_mess=PLEASE CHOOSE A FOLDER
+
+go_eng=Go
+
+option_lbl=Options
+
+dossier_lbl=_ Default folder _
+
+format_lbl= Supported formats
+
+general_en=General
+
+langue_en= Languages
