commit : recherche par nom et type dynamique fait OK

--- a/src/language/lang_en.properties
+++ b/src/language/lang_en.properties
@@ -22,6 +22,10 @@ param_eng=Settings
 
 folder_mess=PLEASE CHOOSE A FOLDER
 
+folder_mess_empty= No Image is associated with this name
+
+folder_mess_empty_key= No Image is associated with this key-word
+
 go_eng=Go
 
 option_lbl=Options
