--- a/src/language/lang_fr.properties
+++ b/src/language/lang_fr.properties
@@ -22,6 +22,10 @@ param_eng=Parametres
 
 folder_mess=VEUILLEZ CHOISIR UN DOSSIER
 
+folder_mess_empty= Aucune Image n'est associ\u00e9 \u00e0 ce nom
+
+folder_mess_empty_key= Aucune Image n'est associ\u00e9 \u00e0 ce mot-cl\u00e9
+
 go_eng=Ok
 
 option_lbl=Options
