commit : notification ajout mot-cle fait OK

--- a/src/language/lang_en.properties
+++ b/src/language/lang_en.properties
@@ -26,6 +26,12 @@ folder_mess_empty= No Image is associated with this name
 
 folder_mess_empty_key= No Image is associated with this key-word
 
+folder_mess_empty_dir=No directory is selected
+
+titre_notif=Add key-word
+
+msg_notif= key-word associated with image successfuly
+
 go_eng=Go
 
 option_lbl=Options
