--- a/src/language/lang_fr.properties
+++ b/src/language/lang_fr.properties
@@ -22,9 +22,15 @@ param_eng=Parametres
 
 folder_mess=VEUILLEZ CHOISIR UN DOSSIER
 
-folder_mess_empty= Aucune Image n'est associ\u00e9 \u00e0 ce nom
+folder_mess_empty= Aucune Image n'est associ\u00e9e \u00e0 ce nom
 
-folder_mess_empty_key= Aucune Image n'est associ\u00e9 \u00e0 ce mot-cl\u00e9
+folder_mess_empty_key= Aucune Image n'est associ\u00e9e \u00e0 ce mot-cl\u00e9
+
+folder_mess_empty_dir=Aucun r\u00e9pertoire n'est s\u00e9lectionn\u00e9
+
+titre_notif=Ajout mot-cl\u00e9
+
+msg_notif= mot-cl\u00e9 associ\u00e9 \u00e0 l'image avec succ\u00e9s
 
 go_eng=Ok
 
